--- a/config/database.yml
+++ b/config/database.yml
@@ -13,7 +13,7 @@ development:
   encoding: utf8
   database: EngLists_development
   pool: 5
-  username: root
+  username: englists
   password: 123qwe
   socket: /var/run/mysqld/mysqld.sock
 
@@ -25,7 +25,7 @@ test:
   encoding: utf8
   database: EngLists_test
   pool: 5
-  username: root
+  username: englists
   password: 123qwe
   socket: /var/run/mysqld/mysqld.sock
 
