Finish the list manager with some new tests

--- a/test/fixtures/tasks.yml
+++ b/test/fixtures/tasks.yml
@@ -1,6 +1,6 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  description: 'testing my new model'
+  description: testing my new model
   list: software_list
   status: true
